--- a/user/index.html
+++ b/user/index.html
@@ -13,7 +13,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="keywords" content="We Plan Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
 Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
-<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
+<script type="application/x-javascript"> 
+    addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } 
+</script>
 <!--mobile apps-->
 <!--Custom Theme files -->
 <link href="css/bootstrap.css" type="text/css" rel="stylesheet" media="all">
@@ -69,7 +71,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				 <div class="top-menu">
 							<ul class="link-effect-12" id="link-effect-12">
 								<li class="active"><a href="index.html"><span>Home</span></a></li>
-								<li><a href="index.html"><span>Forum Tanya Jawab</span></a></li>
+								<li><a href="forum.html"><span>Forum Tanya Jawab</span></a></li>
 								<li><a href="index.html"><span>Login</span></a></li>
 							</ul>
 				</div>
